...
        }
    }
    
    func showLogoutAlert(in viewController: UIViewController) {
        
        let alert = AlertModelRepeat(
            title: "Пока, пока!",
            message: "Уверены что хотите выйти?",
            buttonText: "Да",
            cancelButtonText: "Нет"
        ) { [weak self] isConfirmd in
            guard let self = self else { return }
            if isConfirmd {
                ProfileLogoutService.shared.logout()
                self.switchToSplashViewController()
...
